页面布局调整，UI优化，适配Iphone X

--- a/HuangXiaoErShop/Classes/Manager(管理)/VipCenter(会员中心)/View/MemberTableViewCell.xib
+++ b/HuangXiaoErShop/Classes/Manager(管理)/VipCenter(会员中心)/View/MemberTableViewCell.xib
@@ -19,16 +19,16 @@
                 <rect key="frame" x="0.0" y="0.0" width="366" height="47.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Stf-Tq-v3D">
-                        <rect key="frame" x="5" y="10" width="50" height="27.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Stf-Tq-v3D">
+                        <rect key="frame" x="0.0" y="10" width="50" height="27.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="qFN-CC-cQ1"/>
+                            <constraint firstAttribute="width" constant="50" id="nmv-Af-ZqZ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="黄小二客户" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AqS-pk-Gj5">
-                        <rect key="frame" x="60" y="10" width="151" height="27.5"/>
+                        <rect key="frame" x="55" y="10" width="156" height="27.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -46,13 +46,13 @@
                 <constraints>
                     <constraint firstItem="AqS-pk-Gj5" firstAttribute="leading" secondItem="Stf-Tq-v3D" secondAttribute="trailing" constant="5" id="4yj-Cq-5dW"/>
                     <constraint firstItem="qV5-VT-AgU" firstAttribute="leading" secondItem="AqS-pk-Gj5" secondAttribute="trailing" constant="5" id="EhS-vP-NQR"/>
-                    <constraint firstItem="Stf-Tq-v3D" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="SBq-YR-fex"/>
-                    <constraint firstItem="Stf-Tq-v3D" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="gRs-S3-jcf"/>
+                    <constraint firstItem="Stf-Tq-v3D" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Kp4-eK-SO4"/>
+                    <constraint firstItem="Stf-Tq-v3D" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="LNZ-0j-wzM"/>
                     <constraint firstAttribute="bottom" secondItem="AqS-pk-Gj5" secondAttribute="bottom" constant="10" id="jd4-Vv-QLA"/>
                     <constraint firstAttribute="bottom" secondItem="qV5-VT-AgU" secondAttribute="bottom" constant="10" id="m4b-xU-ZbU"/>
                     <constraint firstItem="qV5-VT-AgU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="oGe-gM-YO0"/>
+                    <constraint firstAttribute="bottom" secondItem="Stf-Tq-v3D" secondAttribute="bottom" constant="10" id="pTv-g9-ZOD"/>
                     <constraint firstAttribute="trailing" secondItem="qV5-VT-AgU" secondAttribute="trailing" constant="10" id="rT8-cd-5FD"/>
-                    <constraint firstAttribute="bottom" secondItem="Stf-Tq-v3D" secondAttribute="bottom" constant="10" id="v9W-Yk-k8W"/>
                     <constraint firstItem="AqS-pk-Gj5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="vUU-Or-Y2J"/>
                 </constraints>
             </tableViewCellContentView>
